--- a/classicCarServer/src/main/resources/application.yml
+++ b/classicCarServer/src/main/resources/application.yml
@@ -12,9 +12,11 @@ spring:
     init:
       platform: postgresql
       mode: never
-    output:
-      ansi:
-        enabled: always
+  output:
+    ansi:
+      enabled: always
+  config:
+    import: optional:secret.yml
 logging:
   level:
     org:
