--- a/.github/workflows/main_car-app.yml
+++ b/.github/workflows/main_car-app.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - classicCarServer/**
   workflow_dispatch:
 
 jobs:
@@ -23,6 +25,8 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        with:
+          path: classicCarServer/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
