--- a/.github/workflows/main_car-app.yml
+++ b/.github/workflows/main_car-app.yml
@@ -25,8 +25,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-        with:
-          path: classicCarServer/
+        working-directory: ./classicCarServer
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
