--- a/.github/workflows/main_car-app.yml
+++ b/.github/workflows/main_car-app.yml
@@ -7,8 +7,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - classicCarServer/**
+#    paths:
+#      - classicCarServer/**
   workflow_dispatch:
 
 jobs:
