--- a/.github/workflows/main_car-app.yml
+++ b/.github/workflows/main_car-app.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn clean install
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: classicCarServer/actions/upload-artifact@v3
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
