--- a/.github/workflows/main_car-app.yml
+++ b/.github/workflows/main_car-app.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: './classicCarServer/${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/classicCarServer/target/*.jar'
 
   deploy:
     runs-on: windows-latest
